# insurance-underwriting-system

./: .env.example  .gitignore  AI_INTEGRATION.md  CLAUDE.md  README.md  batch_results.json  demo_ab_testing.py  package.json  packages.txt  pyproject.toml  requirements-minimal.txt  requirements-streamlit.txt  requirements.txt  streamlit_cloud_main.py  streamlit_main.py
.streamlit/: config.toml
data/: __init__.py  sample_generator.py
deploy/: README.md  health_check.sh  install_dependencies.sh  nginx.conf  setup_ec2.sh  start_app.sh  streamlit.service
rate_limit_data/: admin_log.json  index.json
rate_limit_data/analytics/: alerts.json  performance_metrics.json  reports.json  usage_trends.json
rate_limit_data/usage/: 1477354a-27c3-4cff-b3ec-8a142ff4c96c_ai_evaluations.json  1477354a-27c3-4cff-b3ec-8a142ff4c96c_underwriting_evaluations.json  152a6ce7-68b0-41df-a7f6-5ad9ca6e7ca4_ai_evaluations.json  152a6ce7-68b0-41df-a7f6-5ad9ca6e7ca4_underwriting_evaluations.json  37544c11-fd06-4766-af08-0016622fe3e0_ai_evaluations.json  37544c11-fd06-4766-af08-0016622fe3e0_underwriting_evaluations.json  7c4ba798-6ad6-457d-bc70-cb4b0bfa22f2_ai_evaluations.json  7c4ba798-6ad6-457d-bc70-cb4b0bfa22f2_underwriting_evaluations.json  811b9c1f-568e-4577-9f0e-c244b0b1b4d8_ai_evaluations.json  811b9c1f-568e-4577-9f0e-c244b0b1b4d8_underwriting_evaluations.json  acfeb48a-3e4c-4660-afc9-b3687cac165f_ai_evaluations.json  acfeb48a-3e4c-4660-afc9-b3687cac165f_underwriting_evaluations.json  d06f9962-335f-4589-8465-2b905c7fbad9_ai_evaluations.json  d06f9962-335f-4589-8465-2b905c7fbad9_underwriting_evaluations.json  ec1bf720-ad9a-4f08-9354-6caa2f890592_ai_evaluations.json  ec1bf720-ad9a-4f08-9354-6caa2f890592_underwriting_evaluations.json  ee0af37b-e6b6-470c-8c71-f63c24c2bb72_ai_evaluations.json  ee0af37b-e6b6-470c-8c71-f63c24c2bb72_underwriting_evaluations.json  eef43d68-4dd3-47ae-9955-63837516bad9_ai_evaluations.json  eef43d68-4dd3-47ae-9955-63837516bad9_underwriting_evaluations.json  fc92b6f0-54d6-4416-b508-dd5fbb818f0a_ai_evaluations.json  fc92b6f0-54d6-4416-b508-dd5fbb818f0a_underwriting_evaluations.json  fdd020bd-7ad0-4598-bcae-5b8bb23f2375_ai_evaluations.json  fdd020bd-7ad0-4598-bcae-5b8bb23f2375_underwriting_evaluations.json  test_user_1_underwriting_evaluations.json
sample_data/: application_001.json  application_002.json  application_003.json  application_004.json  application_005.json  application_006.json  application_007.json  application_008.json  application_009.json  application_010.json
src/insurance_underwriting_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/underwriting/: __init__.py
src/underwriting/ab_testing/: __init__.py  config.py  framework.py  models.py  results.py  sample_generator.py  statistics.py
src/underwriting/ai/: __init__.py  base.py  (+3 more)
streamlit_ab_tests/configs/: ai_conservative_vs_liberal_rules_config.json  conservative_vs_standard_config.json
test_data/: application_001.json  application_002.json  application_003.json  application_004.json  application_005.json
tests/: __init__.py  test_ab_testing.py  test_ai_components.py  test_engine.py  test_models.py  test_rules.py
(+38 files in other folders)
